[package]
name = "fnr"
description = "Intuitive find and replace."
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/erik/fnr"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.51"
atty = "0.2.14"
grep = "0.2.8"
ignore = "0.4"
num_cpus = "1.13.1"
regex = "1.5.4"
structopt = "0.3"
tempfile = "3.2.0"
termcolor = "1.1.2"
text_io = "0.1.9"

[dev-dependencies]
assert_cmd = "1"

[profile.release]
debug = true
